--- a/packages/web/src/index.css
+++ b/packages/web/src/index.css
@@ -1,6 +1,10 @@
 @import '@spectrum-web-components/styles/typography.css';
-@import '@spectrum-web-components/styles/all-large-light.css';
-
+@import '@spectrum-web-components/styles/all-medium-light.css';
+@import "@spectrum-css/vars/dist/spectrum-global.css";
+@import "@spectrum-css/vars/dist/spectrum-medium.css";
+@import "@spectrum-css/vars/dist/spectrum-light.css";
+@import "@spectrum-css/page/dist/index-vars.css";
+@import "@spectrum-css/button/dist/index-vars.css";
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
