--- a/packages/web.openwc/style.css
+++ b/packages/web.openwc/style.css
@@ -13,3 +13,13 @@ body {
   }
 }
 
+sp-theme {
+  width: 100%;
+  background-color: var(--spectrum-global-color-gray-100);
+}
+
+top-nav {
+  width: 100%;
+  background-color: var(--spectrum-blue-600)
+}
+
