--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -15,6 +15,10 @@ governing permissions and limitations under the License.
 @import '@spectrum-web-components/styles/all-medium-light.css';
 @import '@spectrum-web-components/styles/scale-medium.css';
 @import '@spectrum-web-components/styles/theme-light.css';
+@import "@spectrum-css/vars/dist/spectrum-global.css";
+@import "@spectrum-css/vars/dist/spectrum-medium.css";
+@import "@spectrum-css/vars/dist/spectrum-light.css";
+@import "@spectrum-css/page/dist/index-vars.css";
 
 html,
 body {
