--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,22 +1,29 @@
 ---
-title: 'Tips for Budget Gamers'
-layout: '../layouts/Layout.astro'
+export const prerender = true;
+const title = 'Tips for Budget Gamers';
+import Layout from '../layouts/Layout.astro';
 ---
-
-## Why Another Evony Tips Site
-There are lots of sites out there with tips on playing Evony.  Why am I
+<Layout>
+<main>
+    <h2>Why Another Evony Tips Site</h2>
+    <p>There are lots of sites out there with tips on playing Evony.  Why am I
 creating yet another?  I find that the advice I am giving younger and/or less
 knowledgable players differs from what I find on any single site out there.
 This is largely because so many of the sites are targeted on people who spend
 far more on the game than I do.  While they have tons of very valuable info,
 figuring out the right course for the player with a smaller budget can be a
 real challenge.  This site is based on my experiences playing on a more limited
-budget.
+budget.</p>
 
-Much of the information here comes from other authors' work on other sites.  In particular, I am heavily relying on the work of 
-* [Evony Answers](https://www.evonyanswers.com/)
-* [Evony: The King's Return GUIDE WIKI](https://evonyguidewiki.com/)
-* [One Chilled Gamer](https://onechilledgamer.com/)
-* [Evony The King's Return Guides](https://www.evonytkrguide.com/)
+<p/>Much of the information here comes from other authors' work on other sites.  In particular, I am heavily relying on the work of:
+<ul>
+    <li> <a href="https://www.evonyanswers.com/">Evony Answers</a></li>
+    <li> <a href="https://evonyguidewiki.com/">Evony: The King's Return GUIDE WIKI</a></li>
+    <li><a href="https://onechilledgamer.com/">One Chilled Gamer</a></li>
+    <li><a href="https://www.evonytkrguide.com/">Evony The King's Return Guides</a></li>
+</ul>
 
-Many thanks to the incredible work put forth by those who have come before me on these sites in documenting Evony TKR. 
+
+<p>Many thanks to the incredible work put forth by those who have come before me on these sites in documenting Evony TKR.</p>
+</main>
+</Layout>
