--- a/src/pages/generals/[...slug].astro
+++ b/src/pages/generals/[...slug].astro
@@ -1,5 +1,5 @@
 ---
-import { getCollection,getEntryBySlug } from 'astro:content';
+import { getEntryBySlug } from "astro:content";
 import MarkdownPostLayout from '../../layouts/MarkdownPostLayout.astro';
 
 let { slug } = Astro.params;
