--- a/src/components/SideNav.astro
+++ b/src/components/SideNav.astro
@@ -1,34 +1,35 @@
 ---
-import { z, defineCollection } from 'astro:content';
-import { getCollection } from 'astro:content';
-import type { CollectionEntry } from 'astro:content';
+import {  getCollection } from 'astro:content';
 
 const curUrl = new URL(Astro.request.url);
 const selection = curUrl.pathname;
-console.log(`selection is ${selection}`)
-let entries= await getCollection('docs');
+const base = selection.substring(1).includes('/') ? selection.substring(1).split('/').reverse().pop() : selection;
+console.log(`selection is ${selection}, base is ${base}`)
+let entries= await getCollection('docs', ({id}) => {
+  return id.startsWith(base)
+});
 entries = entries.sort((a,b) =>{
   const temp = [a.slug.toString().toLowerCase(), b.slug.toString().toLowerCase()];
-  console.log(temp.sort());
   return a.slug.toString().toLowerCase().localeCompare(b.slug.toString().toLowerCase());
 })
 
 ---
 
 <script>
-  import stylesUrl from '../styles/styles.css';
+  import '../styles/styles.css';
+  import '@spectrum-web-components/sidenav/sp-sidenav.js';
   import '@spectrum-web-components/sidenav/sp-sidenav.js';
   import '@spectrum-web-components/sidenav/sp-sidenav-heading.js';
   import '@spectrum-web-components/sidenav/sp-sidenav-item.js';
 </script>
 
-<sp-sidenav value={selection} style='flex: 1 1 auto; min-height: 1px; height: 90%; min-width: 1px; width: 100%;'>
+<sp-sidenav value={selection} style='flex: 1 1 auto; min-height: 1px; height: 90%; min-width: 1px; width: 100%;' client:idle>
   { entries.map((e) => {
     const thisUrl = '/' + e.slug.toString();
     if(selection === thisUrl) {
-      return <sp-sidenav-item value={thisUrl} selected=true  href={'/' + e.slug}>{e.data.title}</sp-sidenav-item>;
+      return <sp-sidenav-item value={thisUrl} selected=true  href={'/' + e.slug} client:idle >{e.data.title}</sp-sidenav-item>;
     } else {
-      return <sp-sidenav-item value={thisUrl} href={thisUrl}>{e.data.title}</sp-sidenav-item>;
+      return <sp-sidenav-item value={thisUrl} href={thisUrl} client:idle >{e.data.title}</sp-sidenav-item>;
     }
   })}
 </sp-sidenav>
