--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,10 +1,10 @@
 ---
 const {frontmatter} = Astro.props;
 import Layout from './Layout.astro';
-const title = frontmatter.title
+const title = frontmatter.title;
 ---
 
-<Layout>
+<Layout title={title}>
     <slot />
 </Layout>
 
