working on the two index files

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ export const prerender = true;
 const title = 'Tips for Budget Gamers';
 import Layout from '../layouts/Layout.astro';
 ---
-<Layout>
+<Layout title={title}>
 <main>
     <h2>Why Another Evony Tips Site</h2>
     <p>There are lots of sites out there with tips on playing Evony.  Why am I
@@ -26,4 +26,4 @@ budget.</p>
 
 <p>Many thanks to the incredible work put forth by those who have come before me on these sites in documenting Evony TKR.</p>
 </main>
-</Layout>
+</Layout >
