consistent handling of the main tag

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,7 +35,9 @@ const { title } = Astro.props;
 					<SideNav />
 				</div>
 				<div>
-					<slot />
+					<main>
+						<slot />
+					</main>
 				</div>
 			</sp-split-view>
 		</sp-theme>
