--- a/src/components/Spectrum/SideNav.astro
+++ b/src/components/Spectrum/SideNav.astro
@@ -19,7 +19,7 @@ entries = entries.sort((a,b) =>{
 ---
 
 <script>
-  import '../styles/styles.css';
+  import '../../styles/styles.css';
   import '@spectrum-web-components/sidenav/sp-sidenav.js';
   import '@spectrum-web-components/sidenav/sp-sidenav.js';
   import '@spectrum-web-components/sidenav/sp-sidenav-heading.js';
