--- a/src/components/SPTable.astro
+++ b/src/components/SPTable.astro
@@ -1,5 +1,14 @@
 ---
 
+import {
+    Table,
+    TableBody,
+    TableCell,
+    TableCheckboxCell,
+    TableHead,
+    TableHeadCell,
+    TableRow
+} from '@spectrum-web-components/table';
 
 import * as dsv from "d3-dsv";
 import type {DSVRowArray} from "d3-dsv";
@@ -48,62 +57,6 @@ const r = await fetch(csvUrl).then((response) => {
 ---
 <script >
     import '@spectrum-web-components/table/elements.js';
-
-    import {Table} from '@spectrum-web-components/table';
-
-    import type {
-        TableBody,
-        TableCell,
-        TableCheckboxCell,
-        TableHead,
-        TableHeadCell,
-        TableRow
-    } from '@spectrum-web-components/table';
-
-    import {LitElement, css, html} from 'lit';
-    import {customElement, property} from 'lit/decorators.js';
-
-    @customElement('s-p')
-    export class SP extends LitElement {
-
-        constructor(props) {
-            super(props);
-
-        }
-
-        public initTable() {
-            console.log('in initTable')
-            const table: Table = this.querySelector('sp-table');
-            if(!table) {
-                console.log('failed to find table')
-                return;
-            }
-            table.items = table.dataset.records;
-
-            table.renderItem = (item, index) => {
-                let a = item.row;
-                let tc: string[] = [];
-                for (let i = 0; i < this._ids.length; i++) {
-
-                    let content = '';
-                    if (!a[this.ids[i]]) {
-                        content = '';
-                    } else {
-                        content = a[this.ids[i]];
-                    }
-                    const cell = `
-                <sp-table-cell style='text-align: center; box-sizing: content-box;'>${content}</sp-table-cell>`;
-
-                    tc.push(cell);
-                }
-                return tc.toString();
-            }
-        }
-    }
-    customElements.whenDefined({}).then(() => {
-        const s = new SP({name=${tableName_as_ID}});
-        s.initTable();
-    });
 </script>
 <sp-table id={tableName} size="s" density="compact" csv={csv} scroller='true' style='height: 400px'>
     <sp-table-head >
@@ -111,4 +64,17 @@ const r = await fetch(csvUrl).then((response) => {
             return <sp-table-head-cell sortable sort-direction="desc" sort-key={id} >{id}</sp-table-head-cell>
         })}
     </sp-table-head>
-</sp-table>
+    <sp-table-body>
+        {items.map((item) => {
+            <>
+                <sp-table-row value=''>
+                    {ids.map((id) => {
+                        <sp-table-cell>{item[id]}</sp-table-cell>
+                    })}
+                </sp-table-row>
+            </>
+        })}
+
+
+    </sp-table-body>
+</sp-table-row>
