when I grew the page, things from last night broke down.  This might work better

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -52,8 +52,8 @@ sp-theme {
 
 .table-container sp-table {
   max-height: 400px;
+  width: 90vw;
   max-width: 90vw;
-  width: min-content;
   min-width: calc(2 * var(--spectrum-global-dimension-size-3400));
   box-sizing: border-box;
   align-items: stretch;
@@ -71,21 +71,27 @@ sp-theme {
 
 .table-container #Name {
   min-width: var(--spectrum-global-dimension-size-400);
-  max-width: var(--spectrum-global-dimension-size-1200);
+  max-width: max(var(--spectrum-global-dimension-size-1200), 12%);
   flex: 1.5 1 auto;
+}
+
+.table-container #Name ~ sp-table-cell {
+  font-feature-settings: "tnum";
+  max-width: max(var(--spectrum-global-dimension-size-600), 6%);
+  flex: 1 1 auto;
 }
 
 .table-container sp-table-cell {
   min-width: var(--spectrum-global-dimension-size-200);
   width: min-content;
   max-width: max-content;
+  font-size: x-small;
 }
 
 .table-container sp-table-cell,
 .table-container sp-table-head-cell {
   box-sizing: border-box;
   word-break: break-word;
-
 }
 
 
@@ -98,7 +104,10 @@ sp-theme {
 .table-container sp-table-head-cell{
   writing-mode: vertical-rl;
   min-width: var(--spectrum-global-dimension-size-300);
+  max-width: max(var(--spectrum-global-dimension-size-300),6%);
   min-height: var(--spectrum-global-dimension-size-400);
+  flex: 1 1 auto;
+  font-size: x-small;
 }
 
 @media screen and (max-width: 960px) {
@@ -109,5 +118,9 @@ sp-theme {
 
   .table-container > sp-table {
     padding: 0 16px;
+  }
+
+  .table-container sp-table-cell {
+    font-size: x-small;
   }
 }
