try to constrain this?

--- a/src/components/h_flexbox.astro
+++ b/src/components/h_flexbox.astro
@@ -2,6 +2,6 @@
 
 
 ---
-<div style="display: flex; flex-direction: row; flex-wrap: wrap; width: 100%;">
+<div style="display: flex; flex-direction: row; flex-wrap: wrap; width: 100%; box-sizing: content-box; ">
     <slot></slot>
 </div>
